--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,9 @@
     </style>
 </head>
 <body>
-    <textarea id="input" placeholder="단어장넣기"></textarea>
+    <textarea id="input" placeholder="단어장 넣기"></textarea>
+    <textarea id="kor" readonly="readonly" placeholder="한국어"></textarea>
+    <textarea id="noKor" readonly="readonly" placeholder="한국어 아닌 무언가"></textarea>
     <textarea id="eng" readonly="readonly" placeholder="영어"></textarea>
     <textarea id="noEng" readonly="readonly" placeholder="영어 아닌 무언가"></textarea>
 </body>
